fix alignment

--- a/contact-card/style.css
+++ b/contact-card/style.css
@@ -56,6 +56,8 @@ main,
     border-radius: 50%;
     /* overflow: hidden; */
     position: relative;
+    display: flex;
+    align-items: center;
 }
 
 img {
